tests/suite/fail/generated/types/fail_ne_i32_string.ny
fn main() {
    let _ = 1 != "a" //~ ERROR Type mismatch in comparison
}
